# draft-simulator

./: .dockerignore  .gitignore  CONTEXT.md  Cargo.toml  README.md  REFACTOR_SPEC.md  VERSUS_FLOW_SPEC.md  package.json  pnpm-lock.yaml  todo.txt
backend/: .env.sample  .sequelizerc  Dockerfile  helpers.js  index.js  package-lock.json  package.json  tracing.js  vitest.config.js
backend/config/: database.js
backend/middleware/: auth.js  canvasMutationErrors.js  socketService.js  throttle.js
backend/migrations/: 20260130050129-remove-standalone-draft-type.js  20260322210701-baseline.js  20260327014827-add-display-name-to-users.js  20260327022302-add-keyboard-controls.js  20260330110000-add-card-layout-to-canvases.js  20260330123000-add-draft-order-to-card-layout-enum.js  20260330153000-add-wide-draft-order-to-card-layout-enum.js  20260409000000-convert-picks-to-champion-ids.js  20260409120000-add-origin-to-versus-drafts.js  20260415120000-create-navigator-tables.js  20260422120000-navigator-pool-restructure.js  20260423120000-create-saved-pools.js  (+4 more)
docs/: DRA-17-redis-use-cases-investigation.md  DRA-18-auth-flow-investigation.md
frontend/: .env.sample  .eslintrc.js  .eslintrc.json  .prettierrc  .prettierrc.js  Dockerfile  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: compile-champion-meta.mjs  compile-matchup-data.mjs  diagnose-slot17.js  scrape-cdragon.mjs  scrape-meraki.mjs  update-champion-images.mjs  update-champions.mjs  validate-compiled-data.mjs
(+349 files in other folders)
