[workspace]
members = ["packages/engine-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
tokio-util = "0.7"
rayon = "1.10"
napi = { version = "2", features = ["napi8", "async", "tokio_rt"] }
napi-derive = "2"
thiserror = "1"

[profile.release]
lto = true
codegen-units = 1
